Fixed scrollbar rendering issue properly now (for Moz at least, needs to be tested in IE).

--- a/kupu/widgeteer/kupustyles.css
+++ b/kupu/widgeteer/kupustyles.css
@@ -182,7 +182,7 @@ div.kupu-editorframe {
 iframe.kupu-editor-iframe {
   width: 100%;
   height: 100%;
-  margin-bottom: 3em;
+  margin-bottom: -3em;
 }
 
 textarea.kupu-editor-textarea {
